AMC Gain: $ 44.49 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5
AMC Gain: $ -4.13 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 37.42 Win %: 63.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 60 Win %: 57.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 57.64 Win %: 65.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ 3.18 Win %: 73.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 20.97 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 17.07 Win %: 53.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ -19.04 Win %: 63.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 34.25 Win %: 57.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ 6.16 Win %: 97.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ 21.31 Win %: 53.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ -1.05 Win %: 63.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ 9.44 Win %: 71.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 49.96 Win %: 73.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 59.66 Win %: 59.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 66.92 Win %: 69.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 7.1 Win %: 75.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 21.66 Win %: 63.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 17.31 Win %: 53.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ -20.76 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 44.42 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ 7.11 Win %: 97.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ -3.98 Win %: 57.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ 47.91 Win %: 75.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ 21.33 Win %: 53.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 45.44 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 56.36 Win %: 55.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 66.43 Win %: 63.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 3.06 Win %: 46.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 17.68 Win %: 59.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ 2.32 Win %: 69.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 14.92 Win %: 61.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 34.62 Win %: 55.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 38.73 Win %: 59.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QL
AMC Gain: $ 31.28 Win %: 55.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_DB6
AMC Gain: $ 11.99 Win %: 59.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO
AMC Gain: $ 38.93 Win %: 59.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AC
AMC Gain: $ 48.48 Win %: 63.00 in 49 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT
AMC Gain: $ -5.65 Win %: 69.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 44.74 Win %: 65.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 56.53 Win %: 59.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 45.75 Win %: 61.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ -7.65 Win %: 69.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 37.46 Win %: 69.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 24.16 Win %: 57.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ 9.42 Win %: 73.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 46.75 Win %: 61.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ -2.49 Win %: 91.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ 53.12 Win %: 59.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ 2.52 Win %: 73.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ -7.27 Win %: 63.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 47.82 Win %: 67.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 56.38 Win %: 57.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 49.19 Win %: 61.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 1.13 Win %: 73.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 39.22 Win %: 69.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 25.96 Win %: 57.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ 10.69 Win %: 71.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 43.17 Win %: 61.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ 1.57 Win %: 95.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ -27.89 Win %: 51.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ 44.6 Win %: 67.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ 43.1 Win %: 57.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 51.47 Win %: 63.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 49.51 Win %: 51.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 51.65 Win %: 63.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 8.79 Win %: 40.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 47.88 Win %: 61.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ 6.92 Win %: 75.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 31.27 Win %: 67.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 39.45 Win %: 65.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 49.68 Win %: 59.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QL
AMC Gain: $ 38.87 Win %: 63.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_DB6
AMC Gain: $ -4.01 Win %: 57.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AO
AMC Gain: $ 27.7 Win %: 59.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AC
AMC Gain: $ 35.43 Win %: 65.00 in 49 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT
AMC Gain: $ -5.56 Win %: 69.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB8
AMC Gain: $ 9.45 Win %: 57.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB8
AMC Gain: $ -7.11 Win %: 46.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB8
AMC Gain: $ 7.7 Win %: 53.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB8
AMC Gain: $ -16.71 Win %: 65.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB8
AMC Gain: $ 21.13 Win %: 65.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB8
AMC Gain: $ -11.47 Win %: 48.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB8
AMC Gain: $ 3.69 Win %: 73.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB8
AMC Gain: $ -8.91 Win %: 53.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB8
AMC Gain: $ 1.07 Win %: 91.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB8
AMC Gain: $ 28.78 Win %: 53.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR2
AMC Gain: $ -39.41 Win %: 75.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
AMC Gain: $ -34.11 Win %: 71.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR2
AMC Gain: $ 25.51 Win %: 57.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
AMC Gain: $ 0.46 Win %: 51.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
AMC Gain: $ 21.96 Win %: 61.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL
AMC Gain: $ -30.75 Win %: 73.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
AMC Gain: $ 35.3 Win %: 65.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
AMC Gain: $ 1.36 Win %: 51.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
AMC Gain: $ -44.5 Win %: 69.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
AMC Gain: $ 1.16 Win %: 59.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL
AMC Gain: $ 4.9 Win %: 91.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP
AMC Gain: $ -9.91 Win %: 63.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO_AC
AMC Gain: $ 16.61 Win %: 61.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV
AMC Gain: $ 35.46 Win %: 65.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IR2
AMC Gain: $ 27 Win %: 55.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR
AMC Gain: $ 3.92 Win %: 51.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AV
AMC Gain: $ 19.15 Win %: 61.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AL
AMC Gain: $ 7.12 Win %: 53.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_VI
AMC Gain: $ 18.74 Win %: 57.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_LI
AMC Gain: $ -34.16 Win %: 75.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP
AMC Gain: $ 44.64 Win %: 71.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM
AMC Gain: $ 32.91 Win %: 61.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_SS
AMC Gain: $ 2.8 Win %: 51.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QL
AMC Gain: $ 20.24 Win %: 61.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_DB8
AMC Gain: $ 32.81 Win %: 61.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO
AMC Gain: $ 53.94 Win %: 77.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AC
AMC Gain: $ 40.72 Win %: 79.00 in 49 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT
AMC Gain: $ -24.46 Win %: 61.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_TR_QP_DB6
AMC Gain: $ 8.21 Win %: 53.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_TR_DB6
AMC Gain: $ 38.51 Win %: 51.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_AV_DB6
AMC Gain: $ 25.5 Win %: 57.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_AL_DB6
AMC Gain: $ -30.84 Win %: 59.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_QP_DB6
AMC Gain: $ 9.05 Win %: 53.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM_TR_DB6
AMC Gain: $ 22.58 Win %: 55.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM_AV_DB6
AMC Gain: $ -28.18 Win %: 55.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM_QP_DB6
AMC Gain: $ 0.86 Win %: 46.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_IT_QL_DB6
AMC Gain: $ -22.99 Win %: 83.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_IT_QP_DB6
AMC Gain: $ 31.58 Win %: 57.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_TR_IR1
AMC Gain: $ -34.2 Win %: 75.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_TR_QP
AMC Gain: $ -7.42 Win %: 65.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_QP_IR1
AMC Gain: $ 21.34 Win %: 59.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_TR
AMC Gain: $ 33.75 Win %: 51.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_AV
AMC Gain: $ 36.6 Win %: 59.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_AL
AMC Gain: $ -23.52 Win %: 71.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV_QP
AMC Gain: $ 7.72 Win %: 55.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM_TR
AMC Gain: $ 20.05 Win %: 61.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM_AV
AMC Gain: $ -28.93 Win %: 67.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM_QP
AMC Gain: $ 6.96 Win %: 59.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_IT_QL
AMC Gain: $ -22.13 Win %: 91.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_IT_QP
AMC Gain: $ 49.02 Win %: 63.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_AO_AC
AMC Gain: $ 49.28 Win %: 77.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_RV
AMC Gain: $ 15.01 Win %: 53.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_IR1
AMC Gain: $ 16.77 Win %: 53.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_TR
AMC Gain: $ 40.2 Win %: 53.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_AV
AMC Gain: $ 14.73 Win %: 57.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_AL
AMC Gain: $ 1.03 Win %: 38.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_VI
AMC Gain: $ 26.56 Win %: 65.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_LI
AMC Gain: $ -30.98 Win %: 71.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_QP
AMC Gain: $ 41.78 Win %: 67.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_HM
AMC Gain: $ 25.69 Win %: 63.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_SS
AMC Gain: $ -2.23 Win %: 46.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_QL
AMC Gain: $ 9 Win %: 55.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_DB6
AMC Gain: $ 49.02 Win %: 63.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_AO
AMC Gain: $ 49.02 Win %: 63.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_AC
AMC Gain: $ 57.36 Win %: 75.00 in 49 days with algo TB5_CC_QM_OB1_OS1_CB4_CS4_IT
AMC Gain: $ 42.72 Win %: 68.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3
AMC Gain: $ -6.88 Win %: 68.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB8
AMC Gain: $ 7.51 Win %: 56.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB8
AMC Gain: $ -6.6 Win %: 48.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB8
AMC Gain: $ 7.51 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB8
AMC Gain: $ -15.65 Win %: 64.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB8
AMC Gain: $ 16.66 Win %: 64.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB8
AMC Gain: $ -10.3 Win %: 50.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB8
AMC Gain: $ 2.24 Win %: 72.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB8
AMC Gain: $ -10.39 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB8
AMC Gain: $ 1.17 Win %: 92.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB8
AMC Gain: $ 27.92 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR2
AMC Gain: $ -42.14 Win %: 74.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
AMC Gain: $ -44.75 Win %: 70.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR2
AMC Gain: $ 24.66 Win %: 56.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
AMC Gain: $ 0.46 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
AMC Gain: $ 20.1 Win %: 60.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL
AMC Gain: $ -33.73 Win %: 72.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
AMC Gain: $ 34.13 Win %: 64.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
AMC Gain: $ 2.31 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
AMC Gain: $ -40.84 Win %: 70.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
AMC Gain: $ 2.43 Win %: 60.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL
AMC Gain: $ 4.75 Win %: 92.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP
AMC Gain: $ -10.26 Win %: 62.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO_AC
AMC Gain: $ 17.44 Win %: 62.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV
AMC Gain: $ 37.52 Win %: 64.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IR2
AMC Gain: $ 26.91 Win %: 54.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR
AMC Gain: $ 4.72 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AV
AMC Gain: $ 22.89 Win %: 62.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AL
AMC Gain: $ 2.34 Win %: 52.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_VI
AMC Gain: $ 18.63 Win %: 56.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_LI
AMC Gain: $ -34.41 Win %: 74.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP
AMC Gain: $ 44.94 Win %: 72.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM
AMC Gain: $ 35.68 Win %: 64.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_SS
AMC Gain: $ 2 Win %: 50.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QL
AMC Gain: $ 15.89 Win %: 58.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_DB8
AMC Gain: $ 32.86 Win %: 62.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO
AMC Gain: $ 53.47 Win %: 76.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AC
AMC Gain: $ 43.69 Win %: 80.00 in 50 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT
AMC Gain: $ -5.04 Win %: 60.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 37.51 Win %: 64.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 60.82 Win %: 58.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 58.52 Win %: 66.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ 2.99 Win %: 72.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 20.93 Win %: 60.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 19.91 Win %: 52.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ -19.29 Win %: 62.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 33.14 Win %: 56.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ 3.93 Win %: 94.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ 21.72 Win %: 54.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ -0.24 Win %: 64.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ 10.23 Win %: 72.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 50.05 Win %: 74.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 67.33 Win %: 62.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 67.8 Win %: 70.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 7.89 Win %: 76.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 21.25 Win %: 62.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 23.35 Win %: 54.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ -16.52 Win %: 62.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 42.82 Win %: 60.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ 4.35 Win %: 96.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ -5.5 Win %: 56.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ 48 Win %: 76.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ 19.96 Win %: 52.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 44.07 Win %: 60.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 56.83 Win %: 54.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 65.71 Win %: 62.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 2.69 Win %: 46.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 16.91 Win %: 58.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ 1.41 Win %: 68.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 15.62 Win %: 60.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 33.39 Win %: 54.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 38.54 Win %: 58.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QL
AMC Gain: $ 36.42 Win %: 56.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_DB6
AMC Gain: $ 12.31 Win %: 60.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO
AMC Gain: $ 38.14 Win %: 58.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AC
AMC Gain: $ 49.68 Win %: 62.00 in 50 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT
AMC Gain: $ -6.4 Win %: 68.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 44.83 Win %: 66.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 57.41 Win %: 60.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 46.63 Win %: 62.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ -3.25 Win %: 72.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 37.05 Win %: 68.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 23.9 Win %: 56.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ 8.25 Win %: 72.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 45.95 Win %: 60.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ -3.11 Win %: 92.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ 48.1 Win %: 56.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ -6.17 Win %: 66.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ -10.47 Win %: 60.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 47.91 Win %: 68.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 57.26 Win %: 58.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 50.4 Win %: 62.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 1.91 Win %: 74.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 38.44 Win %: 68.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 27.88 Win %: 56.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ 12.83 Win %: 72.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 45.7 Win %: 62.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ -0.42 Win %: 94.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ -26.45 Win %: 50.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ 44.69 Win %: 68.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ 38.62 Win %: 54.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 48.56 Win %: 62.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 52.59 Win %: 52.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 49.15 Win %: 62.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 11.77 Win %: 42.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 47.37 Win %: 60.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ 7.03 Win %: 74.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 32.07 Win %: 68.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 39.64 Win %: 66.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 50.43 Win %: 58.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QL
AMC Gain: $ 29.08 Win %: 62.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_DB6
AMC Gain: $ -4.75 Win %: 56.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AO
AMC Gain: $ 26.75 Win %: 58.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AC
AMC Gain: $ 29.76 Win %: 64.00 in 50 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT
AMC Gain: $ -4.55 Win %: 66.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB8
AMC Gain: $ 38.83 Win %: 64.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB8
AMC Gain: $ 12.03 Win %: 46.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB8
AMC Gain: $ 23.54 Win %: 58.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB8
AMC Gain: $ -9.44 Win %: 64.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB8
AMC Gain: $ 34.33 Win %: 62.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB8
AMC Gain: $ -1.75 Win %: 46.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB8
AMC Gain: $ 14.88 Win %: 76.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB8
AMC Gain: $ 20.06 Win %: 60.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB8
AMC Gain: $ 0.99 Win %: 92.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB8
AMC Gain: $ 28.92 Win %: 58.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR2
AMC Gain: $ 0.31 Win %: 76.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
AMC Gain: $ 8.85 Win %: 80.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR2
AMC Gain: $ 43.6 Win %: 62.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
AMC Gain: $ 24.79 Win %: 48.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
AMC Gain: $ 27.4 Win %: 54.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
AMC Gain: $ 3.6 Win %: 80.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
AMC Gain: $ 29.58 Win %: 58.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
AMC Gain: $ 19.3 Win %: 54.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
AMC Gain: $ 14.85 Win %: 80.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
AMC Gain: $ 46.97 Win %: 62.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
AMC Gain: $ -5.96 Win %: 90.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
AMC Gain: $ -6.57 Win %: 46.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
AMC Gain: $ 36.86 Win %: 70.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV
AMC Gain: $ 34.17 Win %: 60.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IR2
AMC Gain: $ 41.61 Win %: 60.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR
AMC Gain: $ 15.83 Win %: 46.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AV
AMC Gain: $ 23.78 Win %: 54.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AL
AMC Gain: $ 28.12 Win %: 50.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_VI
AMC Gain: $ 36.85 Win %: 58.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_LI
AMC Gain: $ 9.55 Win %: 82.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP
AMC Gain: $ 54.33 Win %: 68.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM
AMC Gain: $ 40.25 Win %: 64.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_SS
AMC Gain: $ 37.39 Win %: 58.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QL
AMC Gain: $ 36.27 Win %: 66.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_DB8
AMC Gain: $ 47.39 Win %: 62.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AO
AMC Gain: $ 34.68 Win %: 56.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AC
AMC Gain: $ 50.68 Win %: 66.00 in 50 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT
AMC Gain: $ 43.32 Win %: 69.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3
AMC Gain: $ -5.71 Win %: 69.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB8
AMC Gain: $ 10.35 Win %: 59.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB8
AMC Gain: $ -7.75 Win %: 48.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB8
AMC Gain: $ 6.92 Win %: 51.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB8
AMC Gain: $ -68.32 Win %: 61.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB8
AMC Gain: $ 21.03 Win %: 65.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB8
AMC Gain: $ -11.13 Win %: 50.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB8
AMC Gain: $ 3.56 Win %: 73.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB8
AMC Gain: $ -6.69 Win %: 38.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB8
AMC Gain: $ -4.24 Win %: 82.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB8
AMC Gain: $ 28.82 Win %: 53.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_IR2
AMC Gain: $ -39.7 Win %: 75.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR_QP
AMC Gain: $ -46.4 Win %: 67.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP_IR2
AMC Gain: $ 26.61 Win %: 57.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_TR
AMC Gain: $ -2.33 Win %: 50.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AV
AMC Gain: $ 20.1 Win %: 57.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_AL
AMC Gain: $ -33.09 Win %: 71.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV_QP
AMC Gain: $ 36.28 Win %: 65.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_TR
AMC Gain: $ 4.29 Win %: 51.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AV
AMC Gain: $ 11.81 Win %: 57.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_AL
AMC Gain: $ -39.11 Win %: 71.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM_QP
AMC Gain: $ -5.44 Win %: 36.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QL
AMC Gain: $ 4.69 Win %: 90.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT_QP
AMC Gain: $ -12.04 Win %: 61.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO_AC
AMC Gain: $ -18.03 Win %: 42.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP_PM
AMC Gain: $ 17.78 Win %: 61.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_RV
AMC Gain: $ 36.85 Win %: 63.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IR2
AMC Gain: $ 29.32 Win %: 55.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_TR
AMC Gain: $ 3.16 Win %: 51.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AV
AMC Gain: $ 18.34 Win %: 59.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AL
AMC Gain: $ 8.88 Win %: 51.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_VI
AMC Gain: $ 19.38 Win %: 55.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_LI
AMC Gain: $ -32.68 Win %: 75.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QP
AMC Gain: $ 43.45 Win %: 69.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_HM
AMC Gain: $ 35.24 Win %: 61.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_SS
AMC Gain: $ 6.5 Win %: 53.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_QL
AMC Gain: $ 20.92 Win %: 61.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_DB8
AMC Gain: $ 33.88 Win %: 63.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AO
AMC Gain: $ 56.69 Win %: 80.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_AC
AMC Gain: $ -5.78 Win %: 36.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_IT
AMC Gain: $ 12.95 Win %: 48.00 in 52 days with algo TB4_HL_HI_QM_OB2_OS2_CB3_CS3_PM
AMC Gain: $ -5.05 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 38.62 Win %: 65.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 63 Win %: 57.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 61.79 Win %: 67.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ 4.6 Win %: 73.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 19.9 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 22.03 Win %: 51.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ -20.49 Win %: 61.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 41.24 Win %: 51.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ 4.62 Win %: 94.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ 18.28 Win %: 51.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ -0.25 Win %: 63.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ 9.46 Win %: 71.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 53.32 Win %: 75.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 69.45 Win %: 61.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 68.36 Win %: 69.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 8.08 Win %: 75.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 24.52 Win %: 63.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 25.47 Win %: 53.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ 37.58 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_AL
AMC Gain: $ -22.83 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 50.05 Win %: 55.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ 3.63 Win %: 94.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ -1.12 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ -0.49 Win %: 84.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP_PM
AMC Gain: $ 51.27 Win %: 76.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ 18.3 Win %: 51.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 47.34 Win %: 61.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 58.95 Win %: 53.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 68.98 Win %: 63.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 5.88 Win %: 48.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 19.8 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ 1.42 Win %: 67.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 18.89 Win %: 61.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 36.73 Win %: 55.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 41.81 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_QL
AMC Gain: $ 31.78 Win %: 55.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_DB6
AMC Gain: $ 9.09 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AO
AMC Gain: $ 40.99 Win %: 59.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_AC
AMC Gain: $ 49.89 Win %: 55.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_IT
AMC Gain: $ -18.78 Win %: 61.00 in 52 days with algo TB5_HL_HS_QM_OB3_OS3_CB5_CS5_PM
AMC Gain: $ -8.12 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
AMC Gain: $ 46.14 Win %: 65.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
AMC Gain: $ 60.15 Win %: 59.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
AMC Gain: $ 49.9 Win %: 63.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
AMC Gain: $ -4.77 Win %: 71.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
AMC Gain: $ 37.99 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
AMC Gain: $ 26.64 Win %: 55.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
AMC Gain: $ -11.24 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
AMC Gain: $ 50.66 Win %: 51.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
AMC Gain: $ 1.25 Win %: 88.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
AMC Gain: $ 49.53 Win %: 55.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_IR1
AMC Gain: $ 0.05 Win %: 71.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR_QP
AMC Gain: $ -12.52 Win %: 59.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP_IR1
AMC Gain: $ 49.22 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_TR
AMC Gain: $ 60 Win %: 57.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AV
AMC Gain: $ 48.46 Win %: 61.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_AL
AMC Gain: $ 0.39 Win %: 73.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV_QP
AMC Gain: $ 35.37 Win %: 65.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_TR
AMC Gain: $ 28.7 Win %: 55.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AV
AMC Gain: $ 41.03 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_AL
AMC Gain: $ 11.29 Win %: 71.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM_QP
AMC Gain: $ 44.41 Win %: 53.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QL
AMC Gain: $ 1.89 Win %: 92.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT_QP
AMC Gain: $ -25.91 Win %: 50.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AO_AC
AMC Gain: $ -14.04 Win %: 65.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP_PM
AMC Gain: $ 46 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_RV
AMC Gain: $ 37.36 Win %: 51.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IR1
AMC Gain: $ 48.88 Win %: 61.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_TR
AMC Gain: $ 53.12 Win %: 51.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AV
AMC Gain: $ 55.53 Win %: 65.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AL
AMC Gain: $ 14.03 Win %: 44.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_VI
AMC Gain: $ 49.9 Win %: 59.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_LI
AMC Gain: $ 4.47 Win %: 73.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QP
AMC Gain: $ 31.64 Win %: 67.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_HM
AMC Gain: $ 39.58 Win %: 65.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_SS
AMC Gain: $ 52.77 Win %: 57.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_QL
AMC Gain: $ 39.48 Win %: 61.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_DB6
AMC Gain: $ -4.88 Win %: 55.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AO
AMC Gain: $ 27.08 Win %: 57.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_AC
AMC Gain: $ 49.96 Win %: 55.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_IT
AMC Gain: $ -12.2 Win %: 57.00 in 52 days with algo TB5_HL_HI_QM_OB3_OS3_CB5_CS5_PM
AMC Gain: $ -2.82 Win %: 67.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB8
AMC Gain: $ 41.25 Win %: 65.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB8
AMC Gain: $ 14.41 Win %: 46.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB8
AMC Gain: $ 29.9 Win %: 55.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB8
AMC Gain: $ -2.43 Win %: 69.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB8
AMC Gain: $ 37.16 Win %: 63.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB8
AMC Gain: $ -1.03 Win %: 46.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB8
AMC Gain: $ 4.68 Win %: 75.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB8
AMC Gain: $ 19.99 Win %: 50.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB8
AMC Gain: $ -3.05 Win %: 90.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB8
AMC Gain: $ 29.91 Win %: 59.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR2
AMC Gain: $ 0.45 Win %: 75.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
AMC Gain: $ 8.14 Win %: 76.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR2
AMC Gain: $ 43.59 Win %: 61.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
AMC Gain: $ 18.86 Win %: 46.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
AMC Gain: $ 25.54 Win %: 51.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
AMC Gain: $ 3.07 Win %: 76.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
AMC Gain: $ 31.67 Win %: 59.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
AMC Gain: $ 21.77 Win %: 51.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
AMC Gain: $ 23.32 Win %: 55.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AL
AMC Gain: $ 15.82 Win %: 78.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
AMC Gain: $ 43.12 Win %: 53.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
AMC Gain: $ -3.12 Win %: 88.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
AMC Gain: $ -5.11 Win %: 48.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
AMC Gain: $ -4.73 Win %: 55.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
AMC Gain: $ 37.5 Win %: 71.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_RV
AMC Gain: $ 34.7 Win %: 61.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IR2
AMC Gain: $ 42.06 Win %: 61.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_TR
AMC Gain: $ 15.21 Win %: 46.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AV
AMC Gain: $ 18.6 Win %: 51.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AL
AMC Gain: $ 25.7 Win %: 48.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_VI
AMC Gain: $ 32.52 Win %: 55.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_LI
AMC Gain: $ 8.86 Win %: 78.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QP
AMC Gain: $ 49.5 Win %: 67.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_HM
AMC Gain: $ 41.82 Win %: 63.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_SS
AMC Gain: $ 42.75 Win %: 55.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_QL
AMC Gain: $ 44.72 Win %: 67.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_DB8
AMC Gain: $ 42.57 Win %: 61.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AO
AMC Gain: $ 33.16 Win %: 57.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_AC
AMC Gain: $ 40.48 Win %: 51.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_IT
AMC Gain: $ 34.32 Win %: 59.00 in 52 days with algo TB4_HL_LO_QM_OB2_OS2_CB5_CS5_PM
